--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: '/PanelCV' #change it according to your repository name
 
 
 # Profile information
-yourname: Rajat Chakravarty  ## put your name
+yourname: Raj Chakravarty  ## put your name
 title: 'Data Scientist'  ## your title
 location: Berkeley, CA
 
