--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl: '/PanelCV' #change it according to your repository name
 
 # Profile information
 yourname: Raj Chakravarty  ## put your name
-title: 'Data Scientist | Project Manager'  ## your title
+title: 'Data Scientist'  ## your title
 location: Berkeley, CA
 
 
