--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 
 title: My Homepage
 url: 'http://www.rajatc.com'
-baseurl: '/PanelCV' #change it according to your repository name
+baseurl: 'http://www.rajatc.com' #change it according to your repository name
 
 
 
